<resources>
    <string name="app_name">GimnasDual</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">No socis</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="gimnasdual">GimnasDual</string>
    <string name="configuraci">Configuració</string>
    <string name="categories">Categories</string>
    <string name="esdeveniments">Esdeveniments</string>
    <string name="sales">Sales</string>
    <string name="chat">Chat</string>
    <string name="enviar">Enviar</string>
    <string name="secci_socis">Secció Socis</string>
    <string name="webServiceURL">http://172.16.12.25:53102/</string>
    <string name="activitats">Activitats</string>
    <string name="rutina">Rutina</string>
    <string name="nomApp">Les Cremades</string>
    <string name="sessions">Sessions</string>
    <string name="nomActInfo">Nom:</string>
    <string name="tipusActInfo">Tipus:</string>
    <string name="intensitatActInfo">Intensitat:</string>
    <string name="descripcio">Descripció:</string>
    <string name="llocEsdevInfo">Lloc:</string>
    <string name="dataEsdevInfo">Data:</string>
    <string name="tipusEsdevInfo">Tipus:</string>
    <string name="nomEsdevAct">Nom:</string>
    <string name="nomSalaInfo">Nom:</string>
    <string name="codiSalaInfo">Codi:</string>
    <string name="aforamentSalaInfo">Aforament:</string>
    <string name="welcome">Benvingut a la nostra aplicació</string>
    <string-array name="exercicis">
        <item>Pull Up</item>
        <item>Push Up</item>
        <item>Squat</item>
        <item>Dips</item>
        <item>Bench Press</item>
        <item>Leg Press</item>
    </string-array>
</resources>
