<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/colorSecondaryLight">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gimnasdual"
        android:textSize="25sp"
        android:textColor="@color/colorAccentDark"/>

    <EditText
        android:id="@+id/login_et_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryLight"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryLight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_btn_enter"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:background="@drawable/border_buttons"
        android:padding="5dp"
        />

    <Button
        android:id="@+id/login_btn_offline"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_buttons"
        android:padding="5dp"
        android:text="@string/login" />

</LinearLayout>